# ChangeLog for dev-java/slf4j-api
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/ChangeLog,v 1.22 2014/04/25 06:01:13 radhermit Exp $

*slf4j-api-1.7.7 (25 Apr 2014)

  25 Apr 2014; Tim Harder <radhermit@gentoo.org> +slf4j-api-1.7.7.ebuild:
  Version bump.

*slf4j-api-1.7.6 (12 Mar 2014)

  12 Mar 2014; Tim Harder <radhermit@gentoo.org> +slf4j-api-1.7.6.ebuild,
  +files/1.7.6-build.xml:
  Version bump.

*slf4j-api-1.7.5-r1 (11 Mar 2014)

  11 Mar 2014; Tim Harder <radhermit@gentoo.org> -slf4j-api-1.7.5.ebuild,
  +slf4j-api-1.7.5-r1.ebuild, files/1.7.5-build.xml:
  Properly remove stub classes that shouldn't be in the built jar.

*slf4j-api-1.7.5 (30 Nov 2013)

  30 Nov 2013; Johann Schmitz <ercpe@gentoo.org> +files/1.7.5-build.xml,
  +slf4j-api-1.7.5.ebuild:
  Updated slf4j-api to 1.7.5

  08 Dec 2012; Agostino Sarubbo <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for ppc64, wrt bug #441172

  07 Dec 2012; Agostino Sarubbo <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for ppc, wrt bug #441172

  07 Dec 2012; <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for x86, wrt bug #441172

  07 Dec 2012; <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for amd64, wrt bug #441172

*slf4j-api-1.6.6 (03 Aug 2012)

  03 Aug 2012; Vlastimil Babka <caster@gentoo.org>
  +files/slf4j-api_maven-build.xml, +slf4j-api-1.6.6.ebuild:
  Version bump, bug #395639. Thanks to Ivan Baidakou <the.dmol@gmail.com> for
  the ebuild and build.xml base.

  17 Oct 2010; Vlastimil Babka <caster@gentoo.org> -slf4j-api-1.5.2.ebuild:
  Remove old.

  14 Oct 2010; Brent Baude <ranger@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable ppc, bug 316317

  26 May 2010; Pacho Ramos <pacho@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable amd64, bug 316317

  11 May 2010; Brent Baude <ranger@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable ppc64, bug 316317

  11 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>