@@ -14,17 +14,17 @@ EBUILD slf4j-api-1.5.11.ebuild 805 SHA256 4d28aebf650c34b11bfc0472417afcad1c4fb4
 EBUILD slf4j-api-1.6.6.ebuild 972 SHA256 04feb7967dfc72e46bd5c68d0211e0cf68a0bbe212bcb74ddac7f91b4f960830 SHA512 002409236adb1bdeca3ad21ff4453e24a0110755da067d60d7974e42eb606f514ff2e4edf4ee4ce91adb9ba59505974c2694a6fb4575e5f42b7a209320f1054b WHIRLPOOL 3a8797df4ef08b9219ec73a413ce7624f82a47461013ba82c24430174c709321927cb078295273eaead46b0e296405584e513b85a03765217786ffbf2faf6cf6
 EBUILD slf4j-api-1.7.5-r1.ebuild 1070 SHA256 f83e34d11cd111913a4a363931861125acf87fe5568b901a951ae00ef9f448b8 SHA512 712c1856a59186c9097296a8509d0fdd3d7130c895dd982d6e4cd84309347470c0d1863f75c358cac3e03ec92c130342084b0509e083d0a9b6bf2a09b0e5434e WHIRLPOOL 99ba05c3f0ef3a9d68fe2e5a873fe3a7ec775d9256f68af1614002998493b605f20514836d1392a2cf67da06a22c8672522d20e9e53f27bfb32e5eb6d92ce72e
 EBUILD slf4j-api-1.7.6.ebuild 1115 SHA256 40e33284ed2cf805184a26dd9df38e2f37ebcab1dc2ce04e9fa2fcab17403999 SHA512 bda9a13445bd5c255440e0959b061e7e233fbd1c7772cc447bc98b157f4a247fd84a852d34f704785a1d7f2a2665ed5adfdd4d35629bc90857010b0e5b5ddfd2 WHIRLPOOL 8baa741b644737e7ad83b3a2d8393a42a39db6f25b8e07684e0cc222fcd50527cb012a5aca4fc4152c4ac03553a40c0552c055327f7141c097810a4d1bd339ff
-EBUILD slf4j-api-1.7.7.ebuild 1115 SHA256 3084ea0f77ae6d898dfec5188b32a89aebfb4b7d4950fbb80b89f37621167ccb SHA512 736f593252b2cea0982e8d8a4ca4aae3d892a87ca064b767e3188ee2bf328004a4ad7d806dadcbb8903894c8f3882cdf978a02d51741211d863ed6db0364d738 WHIRLPOOL 0a99dfd7b91ac55025e5c8bf362302c6cd66bb071b972584477c4e4ffbf7a52de09943044883ebab196f5f5f06bb2e49afb478c64a9b6b137a09c69523aa6709
-MISC ChangeLog 2962 SHA256 40b7a16aa3cb4f02700964e83ceac696abf4a2b9688021efebf83b8250ff46e3 SHA512 13af10b2ecebcf00085360cdea94ec3f61670b162a7aee82012db93cb7f37035b9dc495ff6b243b42af61a59475ec400d7cb38e7253d80086f45652f561e09ea WHIRLPOOL d2dae3d5b856a91b3995284eb9161e1818eacb6ec114712f7f179ad9ffe3717304b6d2a3b133910566b7db112c672577b9a1b666265461cce2f8f67e6cf40595
+EBUILD slf4j-api-1.7.7.ebuild 1114 SHA256 c64e9ffa0a96fe3f7a0d245a152f4a187ea46ecd3df87607150fc331531f4121 SHA512 8ffee75e2f11c73ec6bc16999f407fcfc1b3e0c4583fcba78d3462aa524a5de97b8312e2c14bc8f7ca85e77c7c710bc132d69ad50bccc508939e6027df407aa8 WHIRLPOOL 4430c6a7f5ea0396492d7aae2c3f5fe84eebdc132c19e396238324665180d65ca802a63dcac60ca227528e2a9488518bcbdde150629f1db001217f2f5d179e80
+MISC ChangeLog 3063 SHA256 e77f0af6e3393ab42e987d4df11d481ff06ab98c3cc33cc21fefc84575cb50f5 SHA512 6a84118178811ffb7f6afd57d5313099df7a82b5b5ec42bc09679ac09badd2db20328ef761ce41b04a027185d75ca8f4d9a327188a78929e854bfc8a65eddb9b WHIRLPOOL 6c2739df47a7d2cc03d1abae7788647f51febbbe09d75726e2264f6b4e38c54c106fdc4bee6285172aa2141caccca843db7f1d97aa8b27f25c5b4c601914e957
 MISC metadata.xml 159 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb SHA512 74dc9ada199a90543b8e1c168c7054f2e973fbfa2551e2b959d67501f2538e269cfb4b2f0905a88a1afa04c20b33961336310ba876f80d47c8e7615b2d7c830a WHIRLPOOL a0ac49efeca233ec4d8f63eb69c8e46e1d4ecbd926693c25b1b8c7415e4c565680936aec46f0c4197116fd7a19a3bb571beee493c18bdae1e5e978e3db84f17a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQEcBAEBCAAGBQJTWforAAoJEEqz6FtPBkyjiWQIAJIZcaidZiuZzAoikpLHnhqu
-rkAX0jVdFtkO5OYoGqvq9ikX7CvX/KFAJOv5ti56DFM/toPjiy3ZfwIwDlxEPgR8
-D1zWkDlFu4ZmN+fwgdosfmedadEL0QLNAl05yzzuTKXmoTDPdEtLe8DZaH79F69L
-8xRjynf3iRxCxsrJ5yRlORlNjzHNe2mmGvBxmNAs6X+YfwsffWL1DZLS3H1ygHz9
-m9yZpQ00Q7Gv3nGFu1fJDKOWrhagLwdSqb0ULD2R1JqBpKtIozcWw1kbVw90YZfT
-glCx0epYuwafp1apRvLCl3qejp6SiJGsQjF7tRmkLLtUrWTsuNI7lR313rKtVV4=
-=R0Q2
+iQEcBAEBCAAGBQJVU12XAAoJEJGRpfGTSRu4AQgH/itxnRp3tpO3RFrYvG9Vl1Fy
+fAWZxrBlaKdahmuPoRFcAoXfQK5KJlZKWypZlEIvKCMHOn3jK91IwQycXVwBrVSp
+tNj9OJqGS/HB+HIRkNeqRF1YO49azUE35YTijtcnRvidcVy3RwYRW2XrTnmTBVep
+Z3Ew59jNkpHsOsTz24EwnAQ38xM5oa6Xn0NJY7tts18EYLbZif+dK8Sw6a0qDSam
+Jox6iYOMg0TZf604tsgk+EIXS/aRhHkNPkmnWmdzvMkdn4/jTI/Q3M2weMJ84BER
+TI4H95NfwM7AkHEjNDQ6MmzdHT9QGNoKd10OrGS0PFdfR/7AwQwuh6r7CdvpOeo=
+=T16c
 -----END PGP SIGNATURE-----
