@@ -1,6 +1,6 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/slf4j-api-1.7.7.ebuild,v 1.1 2014/04/25 06:01:13 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/slf4j-api-1.7.7.ebuild,v 1.2 2015/05/13 14:18:58 monsieurp Exp $
 
 EAPI=5
 JAVA_PKG_IUSE="doc source"
@@ -21,7 +21,7 @@ DEPEND=">=virtual/jdk-1.5
 	app-arch/unzip
 	test? (
 		dev-java/junit:4
-		dev-java/ant-junit4:0
+		dev-java/ant-junit:0
 	)"
 
 S="${WORKDIR}/${P/-api/}/${PN}"
