@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install preinst prepare setup test
-DEPEND=>=virtual/jdk-1.5 app-arch/unzip test? ( dev-java/junit:4 dev-java/ant-junit4:0 ) >=dev-java/java-config-2.2.0 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
+DEPEND=>=virtual/jdk-1.5 app-arch/unzip test? ( dev-java/junit:4 dev-java/ant-junit:0 ) >=dev-java/java-config-2.2.0 source? ( app-arch/zip ) >=dev-java/ant-core-1.8.2 >=dev-java/javatoolkit-0.3.0-r2
 DESCRIPTION=Simple Logging Facade for Java
 EAPI=5
 HOMEPAGE=http://www.slf4j.org/
@@ -10,4 +10,4 @@ RDEPEND=>=virtual/jre-1.5 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
 SLOT=0
 SRC_URI=http://www.slf4j.org/dist/slf4j-1.7.7.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-ant-2	1091461b8b02f54fabcfbf159164ff15	java-pkg-2	d562d1b6cbce43112feccc8b7632f1bf	java-utils-2	f7dce580d4098b526be3fa17d4242820	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=61c4b035707395e073bc6251b3ac66fd
+_md5_=bc1eec89d7526b103cfe6c0c276e1be7
